# Controllers/CursoController.go
@@ -92,6 +92,14 @@ func AddNewCurso(c *gin.Context) {
 		Nombre_curso: *input.Nombre_curso,
 		Sigla_curso:  *input.Sigla_curso,
 		Estado_curso: true,
+		Grupos_curso: []Models.Grupo{
+			{
+				Evaluadores_grupo: []Models.Evaluador{},
+				Estudiantes_grupo: []Models.Estudiante{},
+				Nombre_grupo:      "SIN GRUPO",
+				Sigla_grupo:       "SG",
+			},
+		},
 	}
 
 	if err := Repositories.AddNewCurso(&model); err != nil {
@@ -307,4 +315,66 @@ func GetOneCursoEvaluador(c *gin.Context) {
 
 	// ApiHelpers.RespondJSON(c, 200, Output.GetCursoEstudianteOutput(cursos))
 	ApiHelpers.RespondJSON(c, 200, curso)
+}
+
+// @Summary Modifica los cursos de un estudiante
+// @Description Modifica los cursos de un estudiante con los datos entregados
+// @Tags 05 - Administración Ti
+// @Accept  json
+// @Produce  json
+// @Param   id_curso     path    string     true        "ID del curso a modificar"
+// @Param   uuid_estudiante     path    string     true        "UUID del estudiante a asociar"
+// @Success 200 {object} Swagger.AddEstudianteToCursoSwagger "OK"
+// @Failure 400 {object} ApiHelpers.ResponseError "Bad request"
+// @Router /administracion-ti/cursos/{id_curso}/estudiantes/{uuid_estudiante} [put]
+func AddEstudianteToCurso(c *gin.Context) {
+	// params
+	id_curso := c.Params.ByName("id")
+	id_estudiante := c.Params.ByName("id_estudiante")
+
+	// get estudiante entity
+	var estudiante Models.Estudiante
+	if err := Repositories.GetOneEstudiante(&estudiante, id_estudiante); err != nil {
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			ApiHelpers.RespondJSON(c, 200, "Estudiante not found")
+		} else {
+			ApiHelpers.RespondError(c, 500, "default")
+		}
+
+		return
+	}
+
+	// search curso
+	var curso Models.Curso
+	if err := Repositories.GetOneCurso(&curso, id_curso); err != nil {
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			ApiHelpers.RespondJSON(c, 200, "Curso not found")
+		} else {
+			ApiHelpers.RespondError(c, 500, "default")
+		}
+
+		return
+	}
+
+	// search grupo "sin grupo"
+	found, index := Utils.SearchIndexGrupoBySigla(curso.Grupos_curso, "SG")
+	if found {
+		curso.Grupos_curso[index].Estudiantes_grupo = append(curso.Grupos_curso[index].Estudiantes_grupo, estudiante)
+	} else {
+		ApiHelpers.RespondJSON(c, 200, "Grupo not found")
+		return
+	}
+
+	// put query, update entities
+	if err := Repositories.PutOneCurso(&curso, id_curso); err != nil {
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			ApiHelpers.RespondJSON(c, 200, "Curso not found")
+		} else {
+			ApiHelpers.RespondError(c, 500, "default")
+		}
+
+		return
+	}
+
+	ApiHelpers.RespondJSON(c, 200, estudiante)
 }
